--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: warp
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - blas=1.0=mkl
@@ -63,6 +64,7 @@ dependencies:
   - tk=8.6.14=h0416ee5_0
   - tomli=2.0.1=py310haa95532_0
   - tornado=6.4.1=py310h827c3e9_0
+  - trimesh=4.4.9=pyhd8ed1ab_0
   - tzdata=2024a=h04d1e81_0
   - unicodedata2=15.1.0=py310h2bbff1b_0
   - vc=14.40=h2eaa2aa_1
