--- a/environment.yml
+++ b/environment.yml
@@ -3,19 +3,30 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - asttokens=2.0.5=pyhd3eb1b0_0
   - blas=1.0=mkl
   - bottleneck=1.3.7=py310h9128911_0
   - brotli=1.0.9=h2bbff1b_8
   - brotli-bin=1.0.9=h2bbff1b_8
   - bzip2=1.0.8=h2bbff1b_6
-  - ca-certificates=2024.7.2=haa95532_0
+  - ca-certificates=2024.9.24=haa95532_0
+  - colorama=0.4.6=py310haa95532_0
+  - comm=0.2.1=py310haa95532_0
   - contourpy=1.2.0=py310h59b6b97_0
   - cycler=0.11.0=pyhd3eb1b0_0
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - exceptiongroup=1.2.0=py310haa95532_0
+  - executing=0.8.3=pyhd3eb1b0_0
   - fonttools=4.51.0=py310h2bbff1b_0
   - freetype=2.12.1=ha860e81_0
   - icu=73.1=h6c2663c_0
   - intel-openmp=2023.1.0=h59b6b97_46320
+  - ipydatawidgets=4.3.2=pyhc268e32_0
+  - ipython=8.27.0=py310haa95532_0
+  - ipywidgets=8.1.2=py310haa95532_0
+  - jedi=0.19.1=py310haa95532_0
   - jpeg=9e=h827c3e9_3
+  - jupyterlab_widgets=3.0.10=py310haa95532_0
   - kiwisolver=1.4.4=py310hd77b12b_0
   - krb5=1.20.1=h5b6d351_0
   - lcms2=2.12=h83e58a3_0
@@ -34,6 +45,8 @@ dependencies:
   - lz4-c=1.9.4=h2bbff1b_1
   - matplotlib=3.9.2=py310haa95532_0
   - matplotlib-base=3.9.2=py310he19b0ae_0
+  - matplotlib-inline=0.1.6=py310haa95532_0
+  - meshplot=0.4.0=pyhd3deb0d_2
   - mkl=2023.1.0=h6b88ed4_46358
   - mkl-service=2.4.0=py310h2bbff1b_1
   - mkl_fft=1.3.10=py310h827c3e9_0
@@ -45,31 +58,43 @@ dependencies:
   - openssl=3.0.15=h827c3e9_0
   - packaging=24.1=py310haa95532_0
   - pandas=2.2.2=py310h5da7b33_0
+  - parso=0.8.3=pyhd3eb1b0_0
   - pillow=10.4.0=py310h827c3e9_0
   - pip=24.2=py310haa95532_0
   - ply=3.11=py310haa95532_0
+  - prompt-toolkit=3.0.43=py310haa95532_0
+  - prompt_toolkit=3.0.43=hd3eb1b0_0
+  - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pygments=2.15.1=py310haa95532_1
   - pyparsing=3.1.2=py310haa95532_0
   - pyqt=5.15.10=py310hd77b12b_0
   - pyqt5-sip=12.13.0=py310h2bbff1b_0
   - python=3.10.14=he1021f5_1
   - python-dateutil=2.9.0post0=py310haa95532_2
   - python-tzdata=2023.3=pyhd3eb1b0_0
+  - pythreejs=2.4.2=pyh1d7be83_0
   - pytz=2024.1=py310haa95532_0
   - qt-main=5.15.2=h19c9488_10
   - setuptools=75.1.0=py310haa95532_0
   - sip=6.7.12=py310hd77b12b_0
   - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.45.3=h2bbff1b_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
   - tbb=2021.8.0=h59b6b97_0
   - tk=8.6.14=h0416ee5_0
   - tomli=2.0.1=py310haa95532_0
   - tornado=6.4.1=py310h827c3e9_0
+  - traitlets=5.14.3=py310haa95532_0
+  - traittypes=0.2.1=py310haa95532_0
   - trimesh=4.4.9=pyhd8ed1ab_0
+  - typing_extensions=4.11.0=py310haa95532_0
   - tzdata=2024a=h04d1e81_0
   - unicodedata2=15.1.0=py310h2bbff1b_0
   - vc=14.40=h2eaa2aa_1
   - vs2015_runtime=14.40.33807=h98bb1dd_1
+  - wcwidth=0.2.5=pyhd3eb1b0_0
   - wheel=0.44.0=py310haa95532_0
+  - widgetsnbextension=4.0.10=py310haa95532_0
   - xz=5.4.6=h8cc25b3_1
   - zlib=1.2.13=h8cc25b3_1
   - zstd=1.5.5=hd43e919_2
